# idl3

./: .gitignore  CMakeLists.txt  README.md
ast/: CMakeLists.txt  ast.cppm  data_type.cppm  decl.cppm  decorated_decl.cppm  decorator_decl.cppm  field_decl.cppm  operation_decl.cppm  package_decl.cppm  primitive_decl.cppm  protocol_decl.cppm  type_descriptor.cppm  type_info.cppm  using_decl.cppm
cst/: CMakeLists.txt  cst.cppm  identifier.cppm  keyword.cppm  position.cppm  scanner.cppm  whitespace.cppm
parser/: CMakeLists.txt  package.cppm  parser.cppm  using.cppm
parser/test/: CMakeLists.txt  parser_package_test.cpp
test/: CMakeLists.txt
test/ast/: CMakeLists.txt  ast_package_test.cpp  ast_using_test.cpp
test/cst/: CMakeLists.txt  cst_parse_identifier_test.cpp  cst_parse_kw_test.cpp  cst_parse_ws_test.cpp  gen-parse-kw-test.py
test/parser/: CMakeLists.txt  parser_package_test.cpp  parser_using_test.cpp
